--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vj0vKt"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vj0vKt" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=pf9oVP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=pf9oVP" type="text/css">
 
   
   
@@ -102,7 +102,7 @@
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-contact-form mobi-mbri"></span>
+                            <span class="mbr-iconfont mobi-mbri-contact-form mobi-mbri" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-5"><strong>Pewność i bezpieczeństwo</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">Nigdy więcej stresu przed kontrolą. Czuwamy nad zgodnością z przepisami i terminowością. Bierzemy pełną odpowiedzialność za Twoje rozliczenia i finanse.</p>
@@ -113,7 +113,7 @@
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-cash mobi-mbri"></span>
+                            <span class="mbr-iconfont mobi-mbri-cash mobi-mbri" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-5"><strong>Oszczędność czasu</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">Zapomnij o stertach dokumentów. Obsługujemy Cię zdalnie i elektronicznie. Oszczędzony czas przeznacz na rozwój biznesu, a my pomożemy Ci legalnie optymalizować podatki.</p>
@@ -124,7 +124,7 @@
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-user mobi-mbri"></span>
+                            <span class="mbr-iconfont mobi-mbri-user mobi-mbri" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-5"><strong>Osobisty opiekun</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">Nie jesteś tylko kolejnym numerem w ewidencji. Każdy klient ma dedykowanego Opiekuna, który zna specyfikę jego branży i jest do jego dyspozycji w każdej chwili.</p>
@@ -299,31 +299,31 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-phone mobi-mbri" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Telefon</strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+12345678910" class="text-primary">+48 502 534 649</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+12345678910" class="text-secondary">+48 502 534 649</a></p>
                     </div>
                 </div>
             </div>
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Email</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:info@site.com" class="text-primary">biuropitagoras@wp.pl</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:info@site.com" class="text-secondary">biuropitagoras@wp.pl</a></p>
                     </div>
                 </div>
             </div>
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
@@ -336,7 +336,7 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-bulleted-list mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-bulleted-list mobi-mbri" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Godziny Pracy</strong></h6>
@@ -398,7 +398,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2025 <a href="https://www.imediasystem.pl/" class="text-primary" target="_blank">iMedia SysteM</a><br>All Rights Reserved.
+                    © Copyright 2025 <a href="https://www.imediasystem.pl/" class="text-secondary" target="_blank">iMedia SysteM</a><br>All Rights Reserved.
                 </p>
             </div>
         </div>
