--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=pf9oVP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=pf9oVP" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=hTQY6u"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=hTQY6u" type="text/css">
 
   
   
@@ -303,7 +303,7 @@
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Telefon</strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+12345678910" class="text-secondary">+48 502 534 649</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:+48502534649" class="text-secondary text-primary">+48 502 534 649</a></p>
                     </div>
                 </div>
             </div>
@@ -316,7 +316,7 @@
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Email</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:info@site.com" class="text-secondary">biuropitagoras@wp.pl</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:biuropitagoras@wp.pl" class="text-secondary text-primary">biuropitagoras@wp.pl</a></p>
                     </div>
                 </div>
             </div>
